// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tags should render component with disabled items 1`] = `
<styled.div>
  <styled.div
    disabled={true}
    size="big"
    theme={Object {}}
    tooltip="Суздаль"
  >
    <styled.div
      size="big"
    >
      <Styled(styled.div)>
        Суздаль
      </Styled(styled.div)>
    </styled.div>
    <styled.div
      disabled={true}
      size="big"
      tabIndex={-1}
      theme={Object {}}
    >
      <styled.div
        height={20}
        width={20}
      />
    </styled.div>
  </styled.div>
  <styled.div />
  <styled.div
    disabled={true}
    size="big"
    theme={Object {}}
    tooltip="Москва"
  >
    <styled.div
      size="big"
    >
      <Styled(styled.div)>
        Москва
      </Styled(styled.div)>
    </styled.div>
    <styled.div
      disabled={true}
      size="big"
      tabIndex={-1}
      theme={Object {}}
    >
      <styled.div
        height={20}
        width={20}
      />
    </styled.div>
  </styled.div>
  <styled.div />
  <styled.div
    disabled={true}
    size="big"
    theme={Object {}}
    tooltip="Тверь"
  >
    <styled.div
      size="big"
    >
      <Styled(styled.div)>
        Тверь
      </Styled(styled.div)>
    </styled.div>
    <styled.div
      disabled={true}
      size="big"
      tabIndex={-1}
      theme={Object {}}
    >
      <styled.div
        height={20}
        width={20}
      />
    </styled.div>
  </styled.div>
  <styled.div />
  <styled.div
    disabled={true}
    size="big"
    theme={Object {}}
    tooltip="Самара"
  >
    <styled.div
      size="big"
    >
      <Styled(styled.div)>
        Самара
      </Styled(styled.div)>
    </styled.div>
    <styled.div
      disabled={true}
      size="big"
      tabIndex={-1}
      theme={Object {}}
    >
      <styled.div
        height={20}
        width={20}
      />
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`Tags should render component with items 1`] = `
<styled.div>
  <styled.div
    size="big"
    theme={Object {}}
    tooltip="Суздаль"
  >
    <styled.div
      size="big"
    >
      <Styled(styled.div)>
        Суздаль
      </Styled(styled.div)>
    </styled.div>
    <styled.div
      onClick={[Function]}
      size="big"
      tabIndex={1}
      theme={Object {}}
    >
      <styled.div
        height={20}
        width={20}
      />
    </styled.div>
  </styled.div>
  <styled.div />
  <styled.div
    disabled={true}
    size="big"
    theme={Object {}}
    tooltip="Москва"
  >
    <styled.div
      size="big"
    >
      <Styled(styled.div)>
        Москва
      </Styled(styled.div)>
    </styled.div>
    <styled.div
      disabled={true}
      size="big"
      tabIndex={-1}
      theme={Object {}}
    >
      <styled.div
        height={20}
        width={20}
      />
    </styled.div>
  </styled.div>
</styled.div>
`;
